@@ -70,3 +70,6 @@ RESOURCES =  \
 
 include $(top_srcdir)/build/build.mk
 
+module_SCRIPTS += Banshee.Core.dll.config
+EXTRA_DIST += Banshee.Core.dll.config
+
