@@ -1,3 +1,10 @@
+2008-06-02  Sebastian Dröge  <slomo@circular-chaos.org>
+
+	* src/Core/Banshee.Core/Banshee.Core.dll.config:
+	* src/Core/Banshee.Core/Makefile.am:
+	* src/Core/Banshee.Widgets/Banshee.Widgets.dll.config:
+	* src/Core/Banshee.Widgets/Makefile.am: Add some missing dllmaps.
+
 2008-05-30  Aaron Bockover  <abock@gnome.org>
 
 	Banshee 1.0 RC1 (0.99.3) Released
